Add history file

--- a/vedios.html
+++ b/vedios.html
@@ -1,12 +1,4 @@
-<!-- Hannah Qin    hqin1551@conestogac.on.ca 
-Newspaper and magazine articles (both contemporary and from the period)
-Posters, flyers, or other visual material
-Video and audio
-Books or book chapters
-Journal articles
-Government websites
-Interviews or transcriptions
--->
+<!-- Hannah Qin    hqin1551@conestogac.on.ca -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -24,15 +16,31 @@ Interviews or transcriptions
         <h1>The Meaning of Birth Control</h1>
     </header>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="vedios.html">Vedios</a>
-        <a href="posters.html">Posters</a>
-        <a href="reference.html">Articles</a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="vedios.html">Vedios</a>
+            <a href="posters.html">Posters</a>
+            <a href="reference.html">Articles</a>
+        </nav>
     </nav>
     <main>
-        <h2>Birth Contro Affect Women's life largely</h2>
-        <p>This website is trying to explore the history of Birth Control and why it matters. </p>
-        
+        <h2>Vedios of Birth Control</h2>
+        <figure>
+            <iframe src="https://www.youtube.com/embed/8ZWqbD5cXso"></iframe>
+            <figcaption>A Brief History of Contraception</figcaption>
+        </figure>
+
+        <figure>
+            <iframe src="https://www.youtube.com/embed/nB4COKSADzM"></iframe>
+            <figcaption>A History of Birth Control</figcaption>
+        </figure>
+
+        <figure>
+            <iframe src="https://www.youtube.com/embed/RdwLAyWHBVs"></iframe>
+            <figcaption>The surprising link between women’s brains and the birth control pill </figcaption>
+        </figure>
+
+
         <figure>
             <iframe src="https://www.youtube.com/embed/Z-isi9Vw5l8"></iframe>
             <figcaption>A History of Birth Control</figcaption>
